# eel-wasm

./: .gitignore  README.md  compiler.js  emitter.js  evaluator.js  index.js  milkdropGlobals.js  netlify.toml  package.json  parser.js  pnpm-lock.yaml  prettyPrinter.js  prettyPrinter.test.js  shims.js  test.js
benchmark/: patchGlobal.js  performance.js
compiler-rs/: Cargo.toml  README.md
compiler-rs/src/: ast.rs  builtin_functions.rs  constants.rs  emitter.rs  emitter_context.rs  error.rs  file_chars.rs  function_emitter.rs  index_store.rs  lexer.rs  lib.rs  module_emitter.rs  ops.rs  parser.rs  shim.rs  span.rs  tokens.rs  utils.rs
compiler-rs/tests/: compatibility_test.rs  intagration_test.rs  integration_test.rs  snapshots_test.rs  wasm_test.rs
compiler-rs/tests/common/: mod.rs
compiler-rs/tests/fixtures/ast/: local_variables.eel  local_variables.snapshot  one_plus_one.snapshot  order_of_operations_unary.eel  order_of_operations_unary.snapshot
compiler-rs/tests/fixtures/tokens/: one_backslash_one.invalid.eel  one_backslash_one.invalid.snapshot  one_plus_one.snapshot  whitespace.eel  whitespace.snapshot
compiler-rs/tests/fixtures/wat/: div.eel  div.snapshot  one_plus_nothing.invalid.snapshot  one_plus_one.snapshot  pow.eel  pow.snapshot  reg.eel  reg.snapshot  shims_wrong_args.invalid.eel  shims_wrong_args.invalid.snapshot  sin.eel  sin.snapshot  wrong_arity_if.invalid.eel  wrong_arity_if.invalid.snapshot
fixtures/: Cope - Cartune (extrusion machine) [fixed].milk  bdrv_flexi_va_ultramix_148_oblivion_notifier.milk  md_youtube_broadcast_yourself.json  (+1 more)
(+61 files in other folders)
