[package]
name = "eel_wasm"
version = "0.1.0"
authors = ["Jordan Eldredge <jordan@jordaneldredge.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-wasm = "0.42.2"

[dev-dependencies]
wasmi = "0.8.0"
wabt = "0.9.0"
